# findeeznuts

./: .gitignore  CMakeLists.txt  README.md  aruco_debug.py  calib.yaml  commands.txt  package.xml  view_camera.py
config/: aruco_picker.yaml
findeeznuts/: CMakeLists.txt  package.xml
findeeznuts/config/: aruco_picker.yaml
findeeznuts/msg/: DetectedTag.msg
findeeznuts/src/: aruco_picker_node.cpp
launch/: aruco_picker.launch.py  aruco_pose_debug.launch.py  aruco_with_camera.launch.py  full_stack.launch.py
scripts/: aruco_pose_debug_node.py  start_aruco.sh
src/: aruco_picker_node.cpp  camera_capture_node.cpp
systemd/: aruco-picker.service
